--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,70 +1,99 @@
 body{
     background-color: black;
+    font-family: 'Dancing Script', cursive;
 }
+
 #contenedor{
     width: 80%;
     margin-left: 10%;
 }
-header{
-    border: solid 1px aqua;
-    background-color: #5b7989;
+#cabecera{
+    padding: 1%;
     border-radius: 10px 10px 0px 0px;
-    width: 96%;
-    padding: 2%;
-    height: 60px;
+    background-color: #5b7989;
+    float: left;
+    width: 98%;
 }
 
-#titulo{
+#cabecera p{
+    margin: 0;
     color: #ffffff;
+    text-shadow: 5px 5px 2px #02010a;
+}
+
+.titulo{
+    font-size: 2.5em;
     float: left;
 }
 
-#menu{
-    margin-top: 30px;
+.menu{
+    text-align: right;
+    font-size: 1.5em;
     float: right;
-    padding: 10px;
 }
 
-#menu a{
+.menu a{
     color: #ffffff;
 }
+
+#actual{
+    text-decoration: none;
+}
+
+.menu a:hover{
+    font-weight: bold;
+}
+
 #imagen_central{
-    background-color:  #82c3a6;
+    background-color: #82c3a6;
     text-align: center;
-    border: solid 1px aqua;
-    width: 100%;
-}
-
-#imagen_alterna{
-    border: solid 1px green;
-    height: 54px;
-    width: 96%;
-    padding: 2%;
-    background-color: #d5c75f;
-}
-
-.alterna_izq{
-    border: solid 2px green;
-    height: 50px;
+    width: 99%;
+    padding: 0.5%;
     float: left;
-    width: 46%;
 }
 
-.alterna_der{
-    border: solid 2px green;
-    height: 50px;
-    float: right;
-    width: 46%;
+#imagen_central img{
+    width: 80%;
 }
+
+.imagen_alterna{
+    width: 98%;
+    background-color: #d5c75f;
+    padding: 1%;
+    float: left;
+}
+
+.imagen_alterna div{
+    width: 48%;
+    text-align: center;
+}
+
+.imagen_alterna div img{
+    width: 100%;
+    height: 100%;
+    margin: 2px;
+}
+
+#alterna_izq{
+    float: left;
+}
+
+#alterna_der{
+    float: right;
+}
+
 #pie{
-    border: solid 1px silver;
-    height: 120px;
     background-color: #C6d5c5;
     border-radius: 0px 0px 10px 10px;
+    padding: 1%;
+    float: left;
+    width: 98%;
 }
-#pie div{
+
+.pie_element{
+    color: blue;
     float: left;
     width: 23%;
-    background-color: #243ff4;
     margin: 1%;
+    text-align: justify;
 }
