--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,10 +3,33 @@ body{
     font-family: 'Dancing Script', cursive;
 }
 
+img{
+    box-shadow: 2px 2px 2px #02010a;
+    -moz-box-shadow: 2px 2px 2px #02010a;
+    -webkit-box-shadow: 2px 2px 2px #02010a;
+}
+
+@keyframes entrada{
+    0%{
+        margin-top: 150%;
+    }
+    60%{
+        margin-top: -5%;
+    }
+    100%{
+        margin-top: 0%;
+    }
+}
+
 #contenedor{
+    float: left;
     width: 80%;
     margin-left: 10%;
+    animation-name: entrada;
+    animation-duration: 1s;
+    animation-timing-function: linear;
 }
+
 #cabecera{
     padding: 1%;
     border-radius: 10px 10px 0px 0px;
@@ -22,14 +45,16 @@ body{
 }
 
 .titulo{
-    font-size: 2.5em;
+    font-size: 2.5vw;
     float: left;
+    height: 100%;
 }
 
 .menu{
     text-align: right;
-    font-size: 1.5em;
+    font-size: 2vw;
     float: right;
+    height: 100%;
 }
 
 .menu a{
@@ -38,10 +63,6 @@ body{
 
 #actual{
     text-decoration: none;
-}
-
-.menu a:hover{
-    font-weight: bold;
 }
 
 #imagen_central{
@@ -56,30 +77,31 @@ body{
     width: 80%;
 }
 
-.imagen_alterna{
+.imagen_alterna, #galeria{
     width: 98%;
     background-color: #d5c75f;
     padding: 1%;
     float: left;
 }
 
-.imagen_alterna div{
+.imagen_alterna a{
     width: 48%;
     text-align: center;
+    float: left;
+    margin: 1%;
 }
 
-.imagen_alterna div img{
+.imagen_alterna a img{
     width: 100%;
     height: 100%;
     margin: 2px;
 }
 
-#alterna_izq{
-    float: left;
-}
-
-#alterna_der{
-    float: right;
+.izq:hover{
+    transform: rotateZ(10deg);
+    box-shadow: 2px 2px 10px black;
+    -wekit-box-shadow: 2px 2px 10px #82c3a6;
+    -moz-box-shadow: 2px 2px 10px #82c3a6;
 }
 
 #pie{
@@ -96,4 +118,21 @@ body{
     width: 23%;
     margin: 1%;
     text-align: justify;
+}
+
+.galeria_element{
+    width: 30%;
+    float: left;
+    margin: 1.5%;
+}
+
+.galeria_element img{
+    width: 100%;
+    margin: 1%;
+}
+
+.galeria_element img:hover{
+    box-shadow: 1px 1px 10px #02010a;
+    -moz-box-shadow: 1px 1px 10px #02010a;
+    -webkit-box-shadow: 1px 1px 10px #02010a;
 }
