--- a/css/estilos.css
+++ b/css/estilos.css
@@ -31,11 +31,12 @@ img{
 }
 
 #cabecera{
-    padding: 1%;
     border-radius: 10px 10px 0px 0px;
     background-color: #5b7989;
+    padding: 1%;
     float: left;
     width: 98%;
+    height: 90%;
 }
 
 #cabecera p{
@@ -45,14 +46,14 @@ img{
 }
 
 .titulo{
-    font-size: 2.5vw;
-    float: left;
+    font-size: 2em;
     height: 100%;
+    float: left;
 }
 
 .menu{
     text-align: right;
-    font-size: 2vw;
+    font-size: 1.6em;
     float: right;
     height: 100%;
 }
@@ -104,6 +105,14 @@ img{
     -moz-box-shadow: 2px 2px 10px #82c3a6;
 }
 
+.der:hover{
+    transform: translate(20px, -5px);
+    border: 2px solid;
+    box-shadow: 2px 2px 10px black;
+    -wekit-box-shadow: 2px 2px 10px #82c3a6;
+    -moz-box-shadow: 2px 2px 10px #82c3a6;
+}
+
 #pie{
     background-color: #C6d5c5;
     border-radius: 0px 0px 10px 10px;
@@ -113,11 +122,15 @@ img{
 }
 
 .pie_element{
-    color: blue;
     float: left;
     width: 23%;
     margin: 1%;
     text-align: justify;
+}
+
+.pie_element p, h2{
+    color: black;
+    font-size: 25px;
 }
 
 .galeria_element{
@@ -131,8 +144,62 @@ img{
     margin: 1%;
 }
 
-.galeria_element img:hover{
-    box-shadow: 1px 1px 10px #02010a;
-    -moz-box-shadow: 1px 1px 10px #02010a;
-    -webkit-box-shadow: 1px 1px 10px #02010a;
+#psj1, #ret1{
+    -webkit-filter: blur(10px);
+    -moz-filter: blur(10px)
+	filter: blur(10px);
+}
+
+#psj2, #psj4, #psj6, #ret2, #ret4, #ret6{
+    -webkit-filter: grayscale(100%);
+    -moz-filter: grayscale(100%)
+	filter: grayscale(100%);
+}
+
+#psj3, #ret3{
+    -webkit-filter: sepia(90%);
+    -moz-filter: sepia(90%);
+	filter: sepia(90%);
+}
+
+@media all and (max-width: 900px) {
+    #contenedor{
+        width: 98%;
+        margin-left: 1%;
+    }
+    .titulo{
+        text-align: center;
+        width: 100%;
+    }
+    .menu{
+        text-align: center;
+        width: 100%;
+    }
+    .imagen_alterna a{
+        width: 96%;
+        text-align: center;
+        float: left;
+        margin: 2%;
+    }
+    .imagen_alterna a img{
+        width: 100%;
+        height: 100%;
+        margin: 5px;
+    }
+    .galeria_element{
+        width: 95%;
+        float: left;
+        margin-left: 2.5%;
+    }
+    .galeria_element img{
+        width: 96%;
+        margin: 1.2%;
+    }
+    .pie_element{
+        color: blue;
+        float: left;
+        width: 96%;
+        margin: 1%;
+        text-align: justify;
+    }
 }
