--- a/css/estilos.css
+++ b/css/estilos.css
@@ -33,9 +33,9 @@ img{
 #cabecera{
     border-radius: 10px 10px 0px 0px;
     background-color: #5b7989;
-    padding: 1%;
+    padding: 2.5%;
     float: left;
-    width: 98%;
+    width: 95%;
     height: 90%;
 }
 
@@ -86,15 +86,14 @@ img{
 }
 
 .imagen_alterna a{
-    width: 48%;
+    width: 46%;
     text-align: center;
     float: left;
-    margin: 1%;
+    margin: 2%;
 }
 
 .imagen_alterna a img{
     width: 100%;
-    height: 100%;
     margin: 2px;
 }
 
@@ -107,7 +106,7 @@ img{
 
 .der:hover{
     transform: translate(20px, -5px);
-    border: 2px solid;
+    border: 2px solid black;
     box-shadow: 2px 2px 10px black;
     -wekit-box-shadow: 2px 2px 10px #82c3a6;
     -moz-box-shadow: 2px 2px 10px #82c3a6;
@@ -130,7 +129,7 @@ img{
 
 .pie_element p, h2{
     color: black;
-    font-size: 25px;
+    font-size: 20px;
 }
 
 .galeria_element{
